--- a/Ducksoft.SOA.BL.Logging/Properties/Ducksoft.SOA.BL.Logging.nuspec.nuspec
+++ b/Ducksoft.SOA.BL.Logging/Properties/Ducksoft.SOA.BL.Logging.nuspec.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata minClientVersion="2.8">
     <id>Ducksoft.SOA.BL.Logging</id>
-    <version>1.0.0.0</version>
+    <version>1.0.0.1</version>
     <title>Ducksoft.SOA.BL.Logging</title>
     <authors>hpsanampudi</authors>
     <owners>Duck Software Limited</owners>
     <licenseUrl>https://github.com/hpsanampudi/Ducksoft.SOA.Logging/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/hpsanampudi/Ducksoft.SOA.BL.Logging</projectUrl>
+    <projectUrl>https://github.com/hpsanampudi/Ducksoft.SOA.Logging</projectUrl>
     <iconUrl>https://www.gravatar.com/avatar/c66699de02a373b3835f8fe83d294328</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>WCF Logging serice library used across SOA application.</description>
