--- a/Ducksoft.SOA.BL.Logging/packages.config
+++ b/Ducksoft.SOA.BL.Logging/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.14" targetFramework="net461" developmentDependency="true" />
   <package id="Ducksoft.SOA.Common" version="3.0.0.5" targetFramework="net461" developmentDependency="true" />
-  <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Ninject" version="3.2.0.0" targetFramework="net461" />
-  <package id="Ninject.Extensions.Logging" version="3.2.3.0" targetFramework="net461" />
-  <package id="Ninject.Extensions.Logging.Log4net" version="3.2.3.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" developmentDependency="true" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Ninject.Extensions.Logging" version="3.2.3.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Ninject.Extensions.Logging.Log4net" version="3.2.3.0" targetFramework="net461" developmentDependency="true" />
 </packages>
