--- a/Ducksoft.SOA.Logging.WebHost/packages.config
+++ b/Ducksoft.SOA.Logging.WebHost/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ducksoft.SOA.BL.Logging" version="1.0.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Ducksoft.SOA.Common" version="3.0.0.5" targetFramework="net461" developmentDependency="true" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Ninject.Extensions.Wcf" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
